--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<section>
 		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<p>Gotta love becoming a collaborative coder <3</p> 
+		<p>keep coding...</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
